--- a/templates/led.html
+++ b/templates/led.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
    <title>Current Status</title>
+    <link rel="stylesheet" href="../static/style.css/">
 </head>
 
 <body>
