led sayfa komple

--- a/templates/led.html
+++ b/templates/led.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-   <title>Current Status</title>
-    <link rel="stylesheet" href="../static/style.css/">
+   <title>PlantTreater</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
