--- a/templates/led.html
+++ b/templates/led.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-   <title>PlantTreater</title>
+   <title>Current Status</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
