--- a/templates/led.html
+++ b/templates/led.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-   <title>Current Status</title>
+   <title>Plant Treater</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
