--- a/templates/led.html
+++ b/templates/led.html
@@ -2,9 +2,8 @@
 <head>
    <title>Plant Treater</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-
 <body>
    <h1>Device Listing and Status</h1>
 
