--- a/templates/led.html
+++ b/templates/led.html
@@ -21,6 +21,6 @@
    <h2>{{ message }}</h2>
    {% endif %}
 
-   <a href="/soil">Soil info</a>
+   Soil data: <a href="/soil">Soil info</a>
 </body>
 </html>
